<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:id="@+id/scrollView"
    tools:context=".ui.profiledit.EditProfilActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarEditProfile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit Profil"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </androidx.appcompat.widget.Toolbar>
        <!--
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgUserPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="2dp"
                    app:civ_fill_color="@android:color/white"
                    tools:src="@tools:sample/avatars"/>

                <Button
                    android:id="@+id/btnChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="false"
                    android:background="@drawable/common_full_open_on_phone"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:text="Ubah Foto"/>
                    -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/etNameUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:hint="@string/name"
                        android:background="@android:color/white"
                        tools:text="Luthfi Alfarisi"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="@color/colorPrimary">

                    <AutoCompleteTextView
                        android:id="@+id/etCityUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:hint="@string/city"
                        android:background="@android:color/white"
                        tools:text="Kab. Bandung"/>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/etEmailUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:hint="@string/email"
                        android:background="@android:color/white"
                        tools:text="luthfi@gmail.com"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColorHint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/etPhoneUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="15sp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:hint="@string/phone"
                        android:background="@android:color/white"
                        tools:text="08123232323"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/colorPrimary"
                    android:text="Ubah Password"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="12sp"
                    android:text="Password"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:background="@android:color/white"
                    android:hint="Password Baru"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/etRetypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textSize="15sp"
                    android:background="@android:color/white"
                    android:hint="Tulis Ulang Password Baru"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/colorPrimary"/>

            </LinearLayout>

        </ScrollView>
